--- a/dotNet-RPG/dotNet-RPG.csproj
+++ b/dotNet-RPG/dotNet-RPG.csproj
@@ -5,5 +5,9 @@
     <RootNamespace>dotNet_RPG</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.0" />
+  </ItemGroup>
+
 
 </Project>
